--- a/src/settings.html
+++ b/src/settings.html
@@ -10,9 +10,9 @@
 <body>
     @@include("./components/header/header.html")
     <main>
-        @@include("./components/promo.html")
+        @@include("./components/setting/setting.html")
     </main>
     @@include("./components/footer/footer.html")
-    <script src="./js/index.bundle.js"></script>
+    <script src="./js/settings.bundle.js"></script>
 </body>
 </html>
